{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 7,
  "lineage": "5bbdb100-ad4f-dd01-b8ee-e55b258c45e0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976295346:internet-gateway/igw-0157980f666c73dd6",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-017b0de6b0a0e8089"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-017b0de6b0a0e8089"
                ]
              }
            ],
            "id": "igw-0157980f666c73dd6",
            "internet_gateway_id": "igw-0157980f666c73dd6",
            "owner_id": "954976295346"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976295346:security-group/sg-0493ff4a6db95ebf6",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0493ff4a6db95ebf6",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "954976295346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default Security Group"
            },
            "tags_all": {
              "Name": "Default Security Group"
            },
            "vpc_id": "vpc-017b0de6b0a0e8089"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976295346:vpc/vpc-017b0de6b0a0e8089",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0009b50ac52dbea68",
            "default_route_table_id": "rtb-0eba02481d2e2ec04",
            "default_security_group_id": "sg-0493ff4a6db95ebf6",
            "dhcp_options_id": "dopt-0ea2fc102fec7c114",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": false,
            "force_destroy": false,
            "id": "vpc-017b0de6b0a0e8089",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eba02481d2e2ec04",
            "owner_id": "954976295346",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976295346:route-table/rtb-03bb8c22f04633e33",
            "id": "rtb-03bb8c22f04633e33",
            "owner_id": "954976295346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0157980f666c73dd6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Managed Public RT"
            },
            "tags_all": {
              "Name": "Managed Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-017b0de6b0a0e8089"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005213a4ad0732fc5",
            "route_table_id": "rtb-03bb8c22f04633e33",
            "subnet_id": "subnet-07e90b28a9f139c3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_vpc.default",
            "aws_route_table.public_rt",
            "aws_subnet.public_managed",
            "data.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976295346:subnet/subnet-07e90b28a9f139c3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.224.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e90b28a9f139c3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954976295346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Managed Public Subnet (us-east-1a)"
            },
            "tags_all": {
              "Name": "Managed Public Subnet (us-east-1a)"
            },
            "vpc_id": "vpc-017b0de6b0a0e8089"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}